# metaverse-center

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp.json  00_PROJECT_OVERVIEW.md  03_DATABASE_SCHEMA_NEW.md  04_DOMAIN_MODELS.md  05_API_SPECIFICATION.md  06_FEATURE_CATALOG.md  07_FRONTEND_COMPONENTS.md  08_SIMULATION_SETTINGS.md  09_AI_INTEGRATION.md  10_AUTH_AND_SECURITY.md  12_DESIGN_SYSTEM.md  13_TECHSTACK_RECOMMENDATION.md  14_I18N_ARCHITECTURE.md  15_MIGRATION_STRATEGY.md  16_TESTING_STRATEGY.md  17_IMPLEMENTATION_PLAN.md  18_THEMING_SYSTEM.md  19_DEPLOYMENT_INFRASTRUCTURE.md  20_RELATIONSHIPS_ECHOES_MAP.md  22B_EPOCHS_COMPETITIVE_LAYER.md  23_MICROANIMATIONS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_AUDIT.md  Dockerfile  GAME_DESIGN_DOCUMENT.md  README.md  biome.json  concept.md  deep-snap.md  pyproject.toml  railway.toml  requirements.txt  terminal-snapshot.md
.claude/: mcp.json
.claude/plans/: feature_expansion_v3.md  glittery-sleeping-catmull.md  mossy-bouncing-yeti.md  resonance-dungeons-frontend.md  resonance-dungeons-integration-tests.md  simulation_forge_concept.md
.claude/research/: devouring-mother-literary-research.md  dungeon-frontend-deep-dive.md  entropy-archetype-full-design.md  entropy-decay-game-mechanics-research.md
.claude/rules/: velg-frontend-design.md
.github/workflows/: ci.yml  post-deploy-check.yml  security.yml
backend/: app.py  config.py  dependencies.py  requirements.txt
backend/middleware/: logging_context.py  rate_limit.py  security.py  seo.py  seo_content.py
backend/models/: achievement.py  admin.py  agent.py  agent_autonomy.py  agent_profession.py  alpha_state.py  ambient_weather.py  audit.py  bluesky.py  bond.py  bot.py  broadsheet.py  building.py  bureau_ops.py  campaign.py  chat.py  chronicle.py  cipher.py  cleanup.py  combat.py  common.py  content_drafts.py  content_packs.py  echo.py  epoch.py  epoch_invitation.py  event.py  forge.py  forge_access.py  game_mechanics.py  gazette.py  generation.py  heartbeat.py  instagram.py  journal.py  location.py  lore.py  member.py  memory.py  news_scanner.py  (+15 more)
backend/routers/: achievements.py  admin.py  admin_content_packs.py  admin_drafts.py  admin_ops.py  agent_autonomy.py  agent_memories.py  agent_professions.py  agents.py  aptitudes.py  bluesky.py  bonds.py  bot_players.py  broadsheets.py  buildings.py  (+43 more)
docs/: 00_PROJECT_OVERVIEW.md  01_PLATFORM_ARCHITECTURE.md  03_DATABASE_SCHEMA_NEW.md  04_DOMAIN_MODELS.md  05_API_SPECIFICATION.md  06_FEATURE_CATALOG.md  07_FRONTEND_COMPONENTS.md  10_AUTH_AND_SECURITY.md  12_DESIGN_SYSTEM.md  14_I18N_ARCHITECTURE.md  16_TESTING_STRATEGY.md  18_THEMING_SYSTEM.md  19_DEPLOYMENT_INFRASTRUCTURE.md  22A_GAME_SYSTEMS.md  22B_EPOCHS_COMPETITIVE_LAYER.md  INDEX.md  PLAYTEST_METHODOLOGY.md  SIMULATION_BLUEPRINT.md  concept.md  feature-discovery-proposals.md  llms.txt
frontend/: .litrc.json  index.html  lit-localize.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: 021_dungeon_content.sql  _fix_spengbab_prod_ids.py  _generate_capybara_images.py  _run_spengbab_a5_a6.py  _spengbab_ab_test.py  _spengbab_max_portraits.py  _spengbab_retry_failed.py  _sync_spengbab_to_production.py  _velgarien_deluxe_regen.py  _velgarien_image_prompts.py  backfill_anchor_settings.sql  dungeon_playtest.py  epoch_sim_lib.py  epoch_statistical_analysis.py  export_for_production.py  extract_dungeon_content_to_sql.py  extract_python_to_pack.py  generate-docs-index.mjs  generate_ab_80_gallery.py  generate_cite_des_dames_images.py  generate_conventional_memory_images.py  generate_dashboard_images.py  generate_dungeon_detail_images.py  generate_embassy_images.py  generate_gaslit_reach_images.py  generate_landing_hero_variations.py  generate_landing_images.py  generate_lore_images.py  generate_lore_migration.mjs  generate_pack_json_schemas.py  generate_real_instagram_gallery.py  generate_showcase_images.py  generate_spengbab_images.py  generate_speranza_images.py  generate_station_null_images.py  generate_stress_test_graphics.py  generate_terminal_boot_art.py  generate_velgarien_images.py  lint-no-content-in-python.sh  lint-no-private-generate.sh  (+22 more)
supabase/: config.toml
(+1393 files in other folders)
