[project]
name = "velgarien-platform"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pydantic-ai>=1.66.0",
    "supabase>=2.25.0",
    "httpx>=0.28.0",
    "Pillow>=12.0.0",
    "cryptography>=46.0.0",
    "PyJWT[crypto]>=2.12.0",
    "python-dotenv>=1.2.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "replicate>=1.0.7",
    "cachetools>=7.0.0",
    "tavily-python>=0.5.0",
    "structlog>=25.5.0",
    "sentry-sdk[fastapi]>=2.29.0",
    "deepl>=1.21.0",
    "pyfiglet>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "FAST"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "S105", "S106", "E501"]
"backend/models/common.py" = ["UP046"]
"backend/app.py" = ["E402"]  # setup_logging() must run before other imports
"backend/routers/**/*.py" = ["B008"]
"backend/dependencies.py" = ["B008"]
"backend/services/**/*.py" = ["A003"]
"backend/services/email_templates.py" = ["A003", "E501"]
"backend/services/ambient_weather_templates.py" = ["E501"]  # Bilingual template tuples are naturally long
"backend/services/combat/ability_schools.py" = ["E501"]  # Bilingual ability descriptions
"backend/services/combat/combat_engine.py" = ["S311", "E501"]  # Game RNG, bilingual combat narratives
"scripts/*.py" = ["I001", "S101", "S104", "S105", "S108", "S110", "S310", "S311", "S602", "S603", "S607", "S608"]  # Test harness: sys.path hack, hardcoded creds/SQL, system commands, URL open, game RNG
"scripts/epoch_statistical_analysis.py" = ["N806"]  # ML convention: uppercase X for feature matrices (scikit-learn)
"scripts/generate_*.py" = ["E501"]  # Image prompt descriptions are naturally long
"scripts/_generate_*.py" = ["E501"]  # Image prompt descriptions are naturally long
"scripts/regenerate_*.py" = ["E501"]  # Image/lore prompt descriptions are naturally long
"scripts/send_test_emails.py" = ["E501"]  # Email template strings are naturally long
"backend/services/dungeon_engine_service.py" = ["S311"]  # Game RNG for banter placeholder resolution
"backend/services/dungeon_movement_service.py" = ["S311"]  # Game RNG for banter placeholder resolution
"backend/services/combat/stress_system.py" = ["S311"]  # Game RNG is intentional
"backend/services/dungeon/archetype_strategies.py" = ["S311"]  # Game RNG for memory toll
"backend/services/dungeon/dungeon_archetypes.py" = ["E501"]  # Config dict lines
"backend/services/dungeon/dungeon_generator.py" = ["S311"]  # Game RNG is intentional
"backend/services/dungeon/dungeon_banter.py" = ["S311", "E501"]  # Game RNG + bilingual banter
"backend/services/dungeon/dungeon_encounters.py" = ["S311", "E501"]  # Game RNG + bilingual narratives
"backend/services/dungeon/dungeon_combat.py" = ["S311", "E501"]  # Game RNG + bilingual descriptions
"backend/services/dungeon/dungeon_loot.py" = ["S311", "E501"]  # Game RNG + bilingual descriptions
"backend/services/dungeon/dungeon_objektanker.py" = ["E501"]  # Bilingual anchor/barometer prose
"backend/services/ambient_weather_service.py" = ["S311"]  # SHA-256 seeded PRNG is intentional (deterministic text, not crypto)
"scripts/**/*.py" = ["T201", "E402"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring app instantiation but not external services",
    "slow: Performance tests that may take several seconds",
    "gamedb: Game mechanics integration tests against live Supabase",
]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
